@@ -24,6 +24,7 @@
 -revise sprite to optimize.
 -revise for javascript interoperability.
 -revise vector elementwise object.
+-revise vector operator methods.
 
 0.26    2022-04-18
 -revise textarea object.
